--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="text-box">
         <div class="heading">To infinity and Beyond</div>
         <div class="button-wrapper">
-            <div class="button" onclick="window.location.href='https://github.com';">Let's go to GitHub</div>
-            <div class="button">Contact Us</div>
+            <div class="button" onclick="window.location.href='https://github.com/TheOAProject';">Let's go to GitHub</div>
+            <div class="button" onclick="window.location.href='https://github.com/live-dev999';">Contact Us</div>
         </div>
     </div>
     </div>
